spade-tests/src/snapshots/spade_tests__integration__unsafe_tests__unsafe_fn_in_trait_impl_mustnt_have_unsafe.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn method(self);
}

impl X for bool {
    unsafe fn method(self) { }
}


error: Safeness of impl method does not match that of trait definition
  ┌─ testinput:6:15
  │
2 │     fn method(self);
  │        ------ But the trait definition isn't
  ·
6 │     unsafe fn method(self) { }
  │               ^^^^^^ This impl is marked as unsafe
  │
  = Remove unsafe here
  │
6 │     unsafe fn method(self) { }
  │     ------
